question-2/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deployment
  namespace: example-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
      - name: example-container
        image: busybox
        volumeMounts:
        - mountPath: "/mnt/efs"
          name: efs-storage
      volumes:
      - name: efs-storage
        persistentVolumeClaim:
          claimName: example-pvc
